syntax = "proto3";
option java_multiple_files = true;

package online.gonlink;
import "google/protobuf/empty.proto";
import "common.proto";

// === GetInfoAccount ===
message GetInfoAccountRequest{}

message ShortUrl {
  string shortCode = 1;
  string originalUrl = 2;
}
message GetInfoAccountResponse{
  string email = 1;
  string name = 2;
  string avatar = 3;
  string role = 4;
  string create = 5;
  repeated ShortUrl urls = 6;
}

// === RemoveUrl ===
message RemoveUrlRequest{
  string shortCode = 1;
}
message RemoveUrlResponse{}

service AccountService {
  rpc getInfoAccount(GetInfoAccountRequest) returns(online.gonlink.StandardResponse){}
  rpc removeUrl(RemoveUrlRequest) returns(online.gonlink.StandardResponse){}
}

